2004-08-16  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-pl1-cvs-b13

	* Fixed a typo in classes/Album.php (missing ')')

2004-08-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b12

	* Fix: If 'shutterfly' is set, but not checked, unset it during the
	  album upgrade.  This caused shutterfly to appear even though it wasn't
	  really enabled.

	* Change: Add copyright to modules.php

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b11

	* Fix: Print fatal error message instead of obscure PHP error
	  when userDB fails to init before we try and use it.

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b10

	* Fix: numAccessibleItems was incorrectly checking isHiddenRecurse()
	  for albums.  It needed to just be isHidden()

2004-08-06  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b9

	* Fix: Prevent foreach() error from being displayed when previewing
	  watermark previews.

	* Fix: Logging into Gallery as a non-admin and then trying to reset
	  the admin password failed.  The logged in user was used and the
	  resetadmin file was ignored

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b8

	* Fix: Extract HTTP_POST_FILES in phpBB2's modules.php

	* Change: Remove modules.php.gz, add modules.php so that we can track
	  code changes.  There's no real reason for it to be gzip'ed.
	  - Updated HowTo.txt and removed 'unzip'...

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b7

	* Fix: Correct the check_exec function which was being a little too liberal
	  in its regex for exec.  (shell_exec was incorrectly labeled as 'exec')

2004-08-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b6

	* Fix: Don't display clickable dimensions for movies

	* Fix: Stack the custom fields on top of each other - users were
	  really displeased by the side-by-side view

2004-07-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b5
